--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    
+    <link rel="icon" type="image/png"  href="https://iconarchive.com/download/i89725/alecive/flatwoken/Apps-Library.ico">
+    <title>The Archives</title>
     <script>if (!window.location.href.includes("index.html")){
         window.location.href="index.html"
-        }</script>
+    }
+    </script>
     <title></title>
     <link rel="stylesheet" href="style/style.css">
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
@@ -29,6 +33,7 @@
   <input onclick="login()" type="button" class="btn" value="Sign in">
 
   <p>Need an Account? <a href="signup.html">Sign Up</a></p>
+  <p>What is <a href="about.html">The Archives?</a></p>
 </div>
   </body>
 </html>
