READY LES GOOOOO

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
                     <li><a href="archives/images.html">Images</a>
                     <li><a href="archives/videos.html">Videos</a>
                     <li><a href="archives/copypastas.html">Copypastas</a>
-                    <li><a href="archives/halloffame.html">Hall of Fame</a>
+                    <li><a href="archives/essays.html">Essays</a>
                 </div>
 
                 <br>
